Updated Name for Branding

--- a/home.html
+++ b/home.html
@@ -31,7 +31,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
     <link rel="icon" href="favicon.ico">
-    <title>Productivity Matrix - Dashboard</title>
+    <title>Taskr - Dashboard</title>
 
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -111,7 +111,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="home.html">Productivity Matrix</a>
+                <a class="navbar-brand" href="home.html">Taskr</a>
             </div>
             <div id="navbar" class="collapse navbar-collapse">
                 <ul class="nav navbar-nav">
@@ -136,7 +136,7 @@
     <div class="container">
         <div id="logo">
             <a href="home.html">
-                <img src="img/logo.png" alt="Productivity Matrix" />
+                <img src="img/logo.png" alt="Taskr" />
             </a>
         </div>
         <div id="notices">
@@ -448,7 +448,7 @@
                 </div>
             </div>
         </div>
-        <p class="copyright">&copy; 2017 Matrix Productivity Technologies</p>
+        <p class="copyright">&copy; 2017 Taskr Technologies</p>
         <nav class="navbar navbar-default navbar-fixed-bottom">
             <div class="container">
                 <form class="form-inline">
